--- a/email.html
+++ b/email.html
@@ -322,7 +322,8 @@
                                                                             <td class="item-name" style="font-family:Arial,Helvetica,sans-serif;font-size:14px;line-height:21px;vertical-align:top;color:#252525" valign="top">Best of Italy
                                                                             </td>
                                                                             <td class="price" style="font-family:Arial,Helvetica,sans-serif;font-size:14px;line-height:21px;vertical-align:top;color:#252525;text-align:right;width:150px" width="150" valign="top" align="right">
-                                                                                <span class="item-price">US$ 3,595.00</span> 
+                                                                                <span class="item-price">US$ 1,039.70
+                                                                                    </span> 
                                                                             </td>
                                                                         </tr>
                                                                     </tbody>
@@ -378,14 +379,14 @@
                                                                             <td class="item-name" style="font-family:Arial,Helvetica,sans-serif;font-size:14px;line-height:21px;vertical-align:top;color:#252525" valign="top">Victoria Hotel Rome (before, 1 night)
                                                                             </td>
                                                                             <td class="price" style="font-family:Arial,Helvetica,sans-serif;font-size:14px;line-height:21px;vertical-align:top;color:#252525;text-align:right;width:150px" width="150" valign="top" align="right">
-                                                                                <span class="item-price">US$ 3,595.00</span> 
+                                                                                <span class="item-price">US$ 12.00</span> 
                                                                             </td>
                                                                         </tr>
                                                                         <tr>
                                                                             <td class="item-name" style="font-family:Arial,Helvetica,sans-serif;font-size:14px;line-height:21px;vertical-align:top;color:#252525" valign="top">Sheraton Parco De Medici (after, 2 nights)
                                                                             </td>
                                                                             <td class="price" style="font-family:Arial,Helvetica,sans-serif;font-size:14px;line-height:21px;vertical-align:top;color:#252525;text-align:right;width:150px" width="150" valign="top" align="right">
-                                                                                <span class="item-price">US$ 3,595.00</span> 
+                                                                                <span class="item-price">US$ 12.00</span> 
                                                                             </td>
                                                                         </tr>
                                                                     </tbody>
@@ -427,14 +428,14 @@
                                                                             <td class="item-name" style="font-family:Arial,Helvetica,sans-serif;font-size:14px;line-height:21px;vertical-align:top;color:#252525" valign="top">Pre-Paid Gratuities (2 adults 1 child)
                                                                             </td>
                                                                             <td class="price" style="font-family:Arial,Helvetica,sans-serif;font-size:14px;line-height:21px;vertical-align:top;color:#252525;text-align:right;width:150px" width="150" valign="top" align="right">
-                                                                                <span class="item-price">US$ 3,595.00</span> 
+                                                                                <span class="item-price">US$ 50.00</span> 
                                                                             </td>
                                                                         </tr>
                                                                         <tr>
                                                                             <td class="item-name" style="font-family:Arial,Helvetica,sans-serif;font-size:14px;line-height:21px;vertical-align:top;color:#252525" valign="top">Travel Protection (2 adults 1 child)
                                                                             </td>
                                                                             <td class="price" style="font-family:Arial,Helvetica,sans-serif;font-size:14px;line-height:21px;vertical-align:top;color:#252525;text-align:right;width:150px" width="150" valign="top" align="right">
-                                                                                <span class="item-price">US$ 3,595.00</span> 
+                                                                                <span class="item-price">US$ 50.00</span> 
                                                                             </td>
                                                                         </tr>
                                                                     </tbody>
